# somef-core

./: .gitignore  Dockerfile  README.md  output 2.json-ld  pyproject.toml  update_version.py
.github/workflows/: action-test-before-PR.yml  pypi-publish.yml  use-rsfc.yml
docs/: index.md  install.md  output.md  usage.md
src/somef/: __main__.py  configuration.py  process_files.py  somef_cli.py
src/somef/test/test_data/: test-314-2.json  test-314-3.json  test-379.json  test-388.json  test-428.json  test-457.json  test-ecfo.json
src/somef/test/test_data/repositories/repos_oeg/: test-category.json
src/somef/utils/: constants.py
src/somef_core/: __main__.py  configuration.py  extract_software_type 2.py  extract_workflows.py  process_files.py  process_repository.py  somef_cli.py  wido_json.json
src/somef_core/parser/: create_excerpts.py
src/somef_core/test/: test_JSON_export.py  test_bower_parser 2.py  test_cabal_parser.py  test_cli.py  test_codemeta_parser.py  test_composer_parser.py  test_configuration.py  test_description_parser.py  test_gemspec_parser 2.py  test_gitlab_selfhosted.py  test_package_json_parser.py  test_parser_somef.py  test_pom_parser.py  test_process_repository.py  test_publiccode_parser.py  test_software_type.py  test_toml_parser 2.py
src/somef_core/test/test_data/: test-314-2.json  test-314-3.json  test-379.json  test-388.json  test-428.json  test-457.json  test-ecfo.json  test_widoco_not_recursive_folders.json  test_widoco_runtime_platform.json
src/somef_core/utils/: constants.py
(+3 files in other folders)
